--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -12,7 +12,6 @@ p
   .customScrollbar();
 }
 
-
-:root {
-  --font-duanNingYingBiXingShu-2: 'DuanNingYingBiXingShu-2';
+body {
+  box-sizing: border-box;
 }
