--- a/assets/less/fonts.less
+++ b/assets/less/fonts.less
@@ -5,3 +5,23 @@
   font-style: normal;
   font-display: swap;
 }
+
+
+.font-system {
+  font-family: system-ui, -apple-system, sans-serif;
+}
+
+
+.font-serif {
+  font-family: Georgia, serif;
+}
+
+.font-sans {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.font-mono {
+  font-family: 'Courier New', monospace;
+}
+.font-duanNingYingBiXingShu2 {
+  font-family: 'DuanNingYingBiXingShu-2', sans-serif;
+}
